cluster/apps/minio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    k10.kasten.io/ignorebackuppolicy: "true"
